--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -16,6 +16,10 @@ depends_on = []
 path = "contracts/aether-sync-integrity.clar"
 depends_on = []
 
+[contracts.aether-sync-metadata]
+path = "contracts/aether-sync-metadata.clar"
+depends_on = []
+
 [repl]
 costs_version = 2
 parser_version = 2
